--- a/Java/fragment/pom.xml
+++ b/Java/fragment/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>per.zyf</groupId>
-    <artifactId>concurrency</artifactId>
+    <artifactId>artifact</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -22,4 +22,17 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-compiler-plugin</artifactId> 
+                <configuration> 
+                    <source>1.8</source> 
+                    <target>1.8</target> 
+                </configuration> 
+            </plugin> 
+        </plugins>
+    </build>
 </project>
