--- a/Java/pure-ssh/pom.xml
+++ b/Java/pure-ssh/pom.xml
@@ -48,7 +48,7 @@
           <server>tomcat7</server>
           <uriEncoding>UTF-8</uriEncoding>
           <port>8088</port>
-          <path>/pureSSM</path>
+          <path>/pureSSH</path>
         </configuration>
       </plugin>
     </plugins>
