--- a/Java/pure-ssm/pom.xml
+++ b/Java/pure-ssm/pom.xml
@@ -2,11 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>per.zyf</groupId>
-	<artifactId>puremvn</artifactId>
+	<artifactId>pure-ssm</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>puremvn Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<name>pure-ssm</name>
 
 	<build>
 		<finalName>pure-ssm</finalName>
