--- a/Java/pure-ssh/pom.xml
+++ b/Java/pure-ssh/pom.xml
@@ -10,10 +10,29 @@
   <name>pure-ssh</name>
 
   <properties>
+    <spring.version>4.3.18.RELEASE</spring.version>
     <struts2.version>2.3.36</struts2.version>
   </properties>
 
   <dependencies>
+    <!-- 引入Spring(包含SpringMVC) 依赖 start -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <!-- 引入Spring 依赖 end -->
+
     <dependency>
       <groupId>org.apache.struts</groupId>
       <artifactId>struts2-spring-plugin</artifactId>
