fork-join program

--- a/Java/concurrency/forkjoin/pom.xml
+++ b/Java/concurrency/forkjoin/pom.xml
@@ -4,14 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>concurrency</name>
-    <groupId>per.zyf.concurrency</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>per.zyf.concurrency</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <modules>
-        <module>forkjoin</module>
-    </modules>
+    <name>forkjoin</name>
+    <groupId>per.zyf.concurrency</groupId>
+    <artifactId>forkjoin</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
